--- a/SCSS/_layout.scss
+++ b/SCSS/_layout.scss
@@ -43,17 +43,15 @@ button, input {
 	}
 	.logo{
 		display: block;
-		background: url("/img/logo-all-dark.svg") no-repeat;
-		background-size: contain;
+		background: center / contain no-repeat url(../img/logo-all-dark.svg);
 		height: 40px;
 		width: 220px;
 		text-indent: 101%;
 		overflow: hidden;
 		white-space: nowrap;
 		@include pad () {
-			height: 18px;
+			height: 24px;
 			width: 120px;
-			background: url(https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/logotype-sm-dark.svg) no-repeat;
 		}
 	}
 	.nav_menu{
@@ -113,7 +111,7 @@ button, input {
 				outline: none;
 			}
 			[name="mail"] {
-				background: $primary-light url(/img/mail-24px.svg) no-repeat 20px 20px;
+				background: $primary-light url(../img/mail-24px.svg) no-repeat 20px 20px;
 				padding: 16px 16px 16px 64px;
 				line-height: $line-s;
 				border: none;
